# momentarily

./: .dockerignore  .env.example  .gitignore  .murk  DOLT_REMOTE.md  NOTICE  README.md  manifest  mvoesgi8mpepidirsrnlr6ihnlqvjco7.darc  pyproject.toml
.beads/: metadata.json
.githooks/: pre-commit
collector/: .env.example  .gitignore  Dockerfile  README.md  collector.py  docker-compose.yml  pyproject.toml
data/: .gitignore  README.md
docs/: feed-expansion.md  go-no-go-review-template.md  self-hosting.md
schema/: snapshot.schema.json
scripts/: __init__.py  export_schema.py  gen_parity_fixture.py  watch_publish.sh
tests/: conftest.py  test_backtest.py  test_clearance_validation.py  test_collector.py  test_competing_risks.py  test_derive.py  test_drift.py  test_dwell.py  test_dwell_cause.py  test_ene.py  test_episodes.py  test_escalation.py  test_eval.py  test_hmm.py  test_load.py  test_load_r2.py  test_mapping.py  test_packaging.py  test_parity.py  test_provenance.py  test_prune.py  test_recovery_dist.py  test_review.py  test_schema.py  test_scorecard.py  test_survival.py  test_train_em.py  test_trip_validation.py  test_vehicle_validation.py
trainer/: package.json  tsconfig.json  wrangler.toml
training/: Containerfile  __init__.py  backtest.py  competing_risks.py  drift.py  dwell.py  episodes.py  escalation.py  eval.py  load.py  load_r2.py  migrate_local.py  provenance.py  prune.py  r2_client.py  recovery_dist.py  review.py  run_filter.py  scorecard.py  survival.py  train_em.py
viz/: .env.local.example  README.md  next.config.mjs  package-lock.json  (+2 more)
(+92 files in other folders)
